{
    "name": "Controls",
    "maps": [
        {
            "name": "ActionMap",
            "id": "10a6f9d1-05ec-4cf1-8109-40d7c957fd9d",
            "actions": [
                {
                    "name": "p1_up",
                    "type": "Button",
                    "id": "e1667b73-da7f-49ab-bb2d-cede2422a124",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "p1_down",
                    "type": "Button",
                    "id": "9b18263d-2410-43ff-bd29-e566a8752f1d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "p2_up",
                    "type": "Button",
                    "id": "28395fc5-d21d-4409-a237-9e47fad31508",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "p2_down",
                    "type": "Button",
                    "id": "137a32ee-0d27-4ec1-8793-cf933eb539ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "481c29e0-f694-4fa4-a940-2907a5fc13f5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "p1_up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "048777c5-c761-47ad-ab0c-575a0d37ac20",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "p1_down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8339583-3449-4a79-8276-389aa5e7d8bf",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "p2_up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c2ec94f3-0f15-4c91-a666-63da8fbb9ab7",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "p2_down",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}